# cross-compile-test

./: CMakeLists.txt  main.cpp  this_does_it.cmd  toolchain_clang.cmake  toolchain_gcc.cmake
include_test_folder/: include_test.h
src_test_folder/: src_test.cpp
